# chime

./: .gitignore  README.md  app.py  package-lock.json  package.json  pyproject.toml
static/: amazon-chime-sdk.min.js  amazon-chime-sdk.min.js.map  meeting.js  style.css
templates/: base.html  delete.html  index.html  meeting.html  sign_in.html
