[tool.poetry]
name = "chime"
version = "0.1.0"
description = ""
authors = ["Jake Bell <sigterm01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"
boto3 = "^1.21.13"
pickleDB = "^0.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
